--- a/public/assets/front/css/style2.css
+++ b/public/assets/front/css/style2.css
@@ -1258,23 +1258,14 @@ template {
 }
 
 /* Testimonial Section */
-.gradient-custom {
-    /* background: radial-gradient(
-            50% 123.47% at 50% 50%,
-            #00ff94 0%,
-            #720059 100%
-        ),
-        linear-gradient(121.28deg, #669600 0%, #ff0000 100%),
-        linear-gradient(360deg, #0029ff 0%, #8fff00 100%),
-        radial-gradient(100% 164.72% at 100% 100%, #6100ff 0%, #00ff57 100%),
-        radial-gradient(100% 148.07% at 0% 0%, #fff500 0%, #51d500 100%); */
+/* .gradient-custom {
     background-blend-mode: screen, color-dodge, overlay, difference, normal;
 }
 .carousel-indicators {
     border-radius: 50%;
     width: 10px;
     height: 10px;
-}
+} */
 
 #testimonials .container .button, button:not([data-filter]):not(.mfp-arrow), input[type="button"], input[type="reset"], input[type="submit"] {
     position: relative;
